web server now serves homepage

--- a/liquidwar6/data/srv/httpd/htdocs/index.html
+++ b/liquidwar6/data/srv/httpd/htdocs/index.html
@@ -13,16 +13,22 @@
   </head>
   <body>
     <h1>%s</h1>
-    <p>
-      This is a <a href="http://www.gnu.org/software/liquidwar6/">Liquid War 6</a> server.
-    <p>
     </p>
       %s
     </p>
-
+    <p>
+      This is a <a href="http://www.gnu.org/software/liquidwar6/">Liquid War 6</a> server.
+      In order to use this server and connect to it, you need to install and run the game.
+      However this web interface allows you to browse games and see what's going on
+      without running the program for real. For more informations, see
+      <a href="http://www.gnu.org/software/liquidwar6/manual/html_node">Liquid War 6 manual</a>.
+    <p>
+    <hr />
+    <img src="screenshot.jpeg" alt="Screenshot" />
     <hr />
     <p>
 <a href="http://www.gnu.org/software/liquidwar6/">Liquid War 6</a> is a unique multiplayer wargame.
+<br />
 Copyright (C)  2005, 2006, 2007, 2008, 2009, 2010  Christian Mauduit <a href="mailto:ufoot@ufoot.org">&lt;ufoot@ufoot.org&gt;</a>
 </p>
 <p>
