fixed refresh stuff

--- a/liquidwar6/data/srv/httpd/htdocs/index.html
+++ b/liquidwar6/data/srv/httpd/htdocs/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="en" />
+    <meta http-equiv="Refresh" content="%d; url=%s" />
     <title>%s</title>
     <meta name="Author" content="%s" />
     <meta name="Description" content="Liquid War 6 server" />
