Factorized INFO & LIST generation + Added max_nb_cursors and max_nb_nodes to node_info.

--- a/liquidwar6/data/srv/httpd/htdocs/index.html
+++ b/liquidwar6/data/srv/httpd/htdocs/index.html
@@ -52,9 +52,11 @@
     <hr />
     <h2><a href="info.txt">Node info</a></h2>
     <ul>
-      <li>Version %s, codename "%s", stamp #%s</li>
-      <li>Bench=%d, uptime=%s</li>
-      <li>Level="%s", %d/%d colors, %d nodes, %d cursors</li>
+      <li>Version: %s, codename: "%s", stamp: #%s</li>
+      <li>Uptime: %s</li>
+      <li>Level: "%s"</li>
+      <li>Bench: %d, required: %d</li>
+      <li>%d/%d colors, %d/%d cursors, %d/%d nodes</li>
     </ul>	 
     <hr />
     <h2><a href="list.txt">Other nodes</a></h2>
