xmllint on HTML templates

--- a/liquidwar6/data/srv/httpd/htdocs/index.html
+++ b/liquidwar6/data/srv/httpd/htdocs/index.html
@@ -1,5 +1,6 @@
+<?xml version="1.0"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="en" />
@@ -37,7 +38,7 @@
   </head>
   <body onload="lw6SetRefresh();">
     <h1>%s</h1>
-    </p>
+    <p>
       %s
     </p>
     <p>
@@ -46,7 +47,7 @@
       However this web interface allows you to browse games and see what's going on
       without running the program for real. For more informations, see
       <a href="http://www.gnu.org/software/liquidwar6/manual/html_node">Liquid War 6 manual</a>.
-    <p>
+    </p>
     <hr />
     <img src="screenshot.jpeg?dummy=%d" alt="Screenshot" id="lw6_screenshot" />
     <hr />
