--- a/liquidwar6/data/srv/httpd/htdocs/index.html
+++ b/liquidwar6/data/srv/httpd/htdocs/index.html
@@ -66,25 +66,23 @@
     </p>
     <hr />
     <p>
+<pre>
 <a href="http://www.gnu.org/software/liquidwar6/">Liquid War 6</a> is a unique multiplayer wargame.
-<br />
 Copyright (C)  2005, 2006, 2007, 2008, 2009, 2010  Christian Mauduit <a href="mailto:ufoot@ufoot.org">&lt;ufoot@ufoot.org&gt;</a>
-</p>
-<p>
+
 This program is free software; you can redistribute it and/or modify
 it under the terms of the <a href="gpl.txt">GNU General Public License</a> as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
-</p>
-<p>
+
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
-</p>
-<p>
+
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
-</p>
+</pre>
+    </p>
   </body>
 </html>
