Optimized network functions by using some static buffers.

--- a/liquidwar6/data/srv/httpd/htdocs/index.html
+++ b/liquidwar6/data/srv/httpd/htdocs/index.html
@@ -42,7 +42,7 @@
       %s
     </p>
     <p>
-      This is a <a href="http://www.gnu.org/software/liquidwar6/">Liquid War 6</a> server.
+      This is a <a href="http://www.gnu.org/software/liquidwar6/">Liquid War 6</a> node.
       In order to use this server and connect to it, you need to install and run the game.
       However this web interface allows you to browse games and see what's going on
       without running the program for real. For more informations, see
