Removed explicit stamp from index page, not required any more with new numbering scheme

--- a/liquidwar6/data/srv/httpd/htdocs/index.html
+++ b/liquidwar6/data/srv/httpd/htdocs/index.html
@@ -53,7 +53,7 @@
     <hr />
     <h2><a href="info.txt">Node info</a></h2>
     <ul>
-      <li>Version: %s, codename: "%s", stamp: #%s</li>
+      <li>Version: %s, codename: "%s"</li>
       <li>Uptime: %s</li>
       <li>Level: "%s"</li>
       <li>Bench: %d, required: %d</li>
